--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "zumaroeth",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:zumaroeth": "node dist/zumaroeth/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -18,13 +17,7 @@
     "@angular/forms": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@angular/ssr": "^18.2.2",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
-    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -33,10 +26,7 @@
     "@angular-devkit/build-angular": "^18.2.2",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
-    "@angular/localize": "^18.2.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
