--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "unique-names-generator": "^4.7.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
